Cria o invoice.factory e refatora o invoice.ctrl

--- a/app/index.html
+++ b/app/index.html
@@ -26,5 +26,6 @@
     <script src="js/main.js"></script>
     <!-- components -->
     <script src="components/invoice/invoice.ctrl.js"></script>
+    <script src="components/invoice/invoice.factory.js"></script>
   </body>
 </html>
