Cria o serviço de comunicação com o BACKEND

--- a/app/index.html
+++ b/app/index.html
@@ -27,5 +27,6 @@
     <!-- components -->
     <script src="components/invoice/invoice.ctrl.js"></script>
     <script src="components/invoice/invoice.factory.js"></script>
+    <script src="components/invoice/invoice.service.js"></script>
   </body>
 </html>
